Assign2/Parser/parser.output
Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: declList decl
    3         | decl

    4 decl: varDecl
    5     | funDecl

    6 varDecl: typeSpec varDeclList SEMICOLON

    7 scopedVarDecl: STATIC typeSpec varDeclList SEMICOLON
    8              | typeSpec varDeclList SEMICOLON

    9 varDeclList: varDeclList COMMA varDeclInit
   10            | varDeclInit

   11 varDeclInit: varDeclId
   12            | varDeclId COLON simpleExp

   13 varDeclId: ID
   14          | ID LBRACKET NUMCONST RBRACKET

   15 typeSpec: INT
   16         | BOOL
   17         | CHAR

   18 funDecl: typeSpec ID LPAREN parms RPAREN stmt
   19        | ID LPAREN parms RPAREN stmt

   20 parms: parmList
   21      | ε

   22 parmList: parmList SEMICOLON parmTypeList
   23         | parmTypeList

   24 parmTypeList: typeSpec parmIdList

   25 parmIdList: parmIdList COMMA parmId
   26           | parmId

   27 parmId: ID
   28       | ID LPAREN RPAREN

   29 stmt: selectStmt

   30 otherStmts: expStmt
   31           | compoundStmt
   32           | returnStmt
   33           | breakStmt

   34 expStmt: exp SEMICOLON
   35        | SEMICOLON

   36 compoundStmt: LBRACE localDecls stmtList RBRACE

   37 localDecls: localDecls scopedVarDecl
   38           | ε

   39 stmtList: stmtList stmt
   40         | ε

   41 selectStmt: matchedStmt
   42           | unmatchedStmt

   43 matchedStmt: IF simpleExp THEN matchedStmt ELSE matchedStmt
   44            | WHILE simpleExp DO matchedStmt
   45            | FOR ID ASSIGN iterRange DO matchedStmt
   46            | otherStmts

   47 unmatchedStmt: IF simpleExp THEN selectStmt
   48              | IF matchedStmt ELSE unmatchedStmt
   49              | WHILE simpleExp DO unmatchedStmt
   50              | FOR ID ASSIGN iterRange DO unmatchedStmt

   51 iterRange: simpleExp
   52          | simpleExp TO simpleExp
   53          | simpleExp TO simpleExp BY simpleExp

   54 returnStmt: RETURN SEMICOLON
   55           | RETURN exp SEMICOLON

   56 breakStmt: BREAK SEMICOLON
   57          | BREAK exp SEMICOLON

   58 exp: mutable ASSIGN exp
   59    | mutable ADDASS exp
   60    | mutable SUBASS exp
   61    | mutable MULASS exp
   62    | mutable DIVASS exp
   63    | mutable INC
   64    | mutable DEC
   65    | simpleExp

   66 simpleExp: simpleExp OR andExp
   67          | andExp

   68 andExp: andExp AND unaryRelExp
   69       | unaryRelExp

   70 unaryRelExp: NOT unaryRelExp
   71            | relExp

   72 relExp: minmaxExp relop minmaxExp
   73       | minmaxExp

   74 relop: LEQ
   75      | LT
   76      | GT
   77      | GEQ
   78      | EQ
   79      | NEQ

   80 minmaxExp: minmaxExp minmaxop sumExp
   81          | sumExp

   82 minmaxop: MIN
   83         | MAX

   84 sumExp: sumExp sumop mulExp
   85       | mulExp

   86 sumop: PLUS
   87      | MINUS

   88 mulExp: mulExp mulop unaryExp
   89       | unaryExp

   90 mulop: STAR
   91      | DIVIDE
   92      | MOD

   93 unaryExp: unaryop unaryExp
   94         | factor

   95 unaryop: MINUS
   96        | STAR
   97        | QUESTION

   98 factor: immutable
   99       | mutable

  100 mutable: ID
  101        | ID LBRACKET exp RBRACKET

  102 immutable: LPAREN exp RPAREN
  103          | call
  104          | constant

  105 call: ID LPAREN args RPAREN

  106 args: argList
  107     | ε

  108 argList: argList COMMA exp
  109        | exp

  110 constant: NUMCONST
  111         | CHARCONST
  112         | STRINGCONST
  113         | TRUE
  114         | FALSE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <tokenData> (258) 13 14 18 19 27 28 45 50 100 101 105
    NUMCONST <tokenData> (259) 14 110
    CHARCONST <tokenData> (260) 111
    STRINGCONST <tokenData> (261) 112
    SEMICOLON <tokenData> (262) 6 7 8 22 34 35 54 55 56 57
    STATIC <tokenData> (263) 7
    COMMA <tokenData> (264) 9 25 108
    COLON <tokenData> (265) 12
    LBRACKET <tokenData> (266) 14 101
    RBRACKET <tokenData> (267) 14 101
    LPAREN <tokenData> (268) 18 19 28 102 105
    RPAREN <tokenData> (269) 18 19 28 102 105
    LBRACE <tokenData> (270) 36
    RBRACE <tokenData> (271) 36
    ASSIGN <tokenData> (272) 45 50 58
    ADDASS <tokenData> (273) 59
    SUBASS <tokenData> (274) 60
    MULASS <tokenData> (275) 61
    DIVASS <tokenData> (276) 62
    INC <tokenData> (277) 63
    DEC <tokenData> (278) 64
    LEQ <tokenData> (279) 74
    LT <tokenData> (280) 75
    GT <tokenData> (281) 76
    GEQ <tokenData> (282) 77
    EQ <tokenData> (283) 78
    NEQ <tokenData> (284) 79
    MIN <tokenData> (285) 82
    MAX <tokenData> (286) 83
    PLUS <tokenData> (287) 86
    MINUS <tokenData> (288) 87 95
    STAR <tokenData> (289) 90 96
    DIVIDE <tokenData> (290) 91
    MOD <tokenData> (291) 92
    QUESTION <tokenData> (292) 97
    INT <tokenData> (293) 15
    BOOL <tokenData> (294) 16
    CHAR <tokenData> (295) 17
    IF <tokenData> (296) 43 47 48
    THEN <tokenData> (297) 43 47
    ELSE <tokenData> (298) 43 48
    WHILE <tokenData> (299) 44 49
    DO <tokenData> (300) 44 45 49 50
    FOR <tokenData> (301) 45 50
    RETURN <tokenData> (302) 54 55
    TO <tokenData> (303) 52 53
    BY <tokenData> (304) 53
    BREAK <tokenData> (305) 56 57
    OR <tokenData> (306) 66
    AND <tokenData> (307) 68
    NOT <tokenData> (308) 70
    TRUE <tokenData> (309) 113
    FALSE <tokenData> (310) 114


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    program <node> (57)
        on left: 1
        on right: 0
    declList <node> (58)
        on left: 2 3
        on right: 1 2
    decl <node> (59)
        on left: 4 5
        on right: 2 3
    varDecl <node> (60)
        on left: 6
        on right: 4
    scopedVarDecl <node> (61)
        on left: 7 8
        on right: 37
    varDeclList <node> (62)
        on left: 9 10
        on right: 6 7 8 9
    varDeclInit <node> (63)
        on left: 11 12
        on right: 9 10
    varDeclId <node> (64)
        on left: 13 14
        on right: 11 12
    typeSpec <node> (65)
        on left: 15 16 17
        on right: 6 7 8 18 24
    funDecl <node> (66)
        on left: 18 19
        on right: 5
    parms <node> (67)
        on left: 20 21
        on right: 18 19
    parmList <node> (68)
        on left: 22 23
        on right: 20 22
    parmTypeList <node> (69)
        on left: 24
        on right: 22 23
    parmIdList <node> (70)
        on left: 25 26
        on right: 24 25
    parmId <node> (71)
        on left: 27 28
        on right: 25 26
    stmt <node> (72)
        on left: 29
        on right: 18 19 39
    otherStmts <node> (73)
        on left: 30 31 32 33
        on right: 46
    expStmt <node> (74)
        on left: 34 35
        on right: 30
    compoundStmt <node> (75)
        on left: 36
        on right: 31
    localDecls <node> (76)
        on left: 37 38
        on right: 36 37
    stmtList <node> (77)
        on left: 39 40
        on right: 36 39
    selectStmt <node> (78)
        on left: 41 42
        on right: 29 47
    matchedStmt <node> (79)
        on left: 43 44 45 46
        on right: 41 43 44 45 48
    unmatchedStmt <node> (80)
        on left: 47 48 49 50
        on right: 42 48 49 50
    iterRange <node> (81)
        on left: 51 52 53
        on right: 45 50
    returnStmt <node> (82)
        on left: 54 55
        on right: 32
    breakStmt <node> (83)
        on left: 56 57
        on right: 33
    exp <node> (84)
        on left: 58 59 60 61 62 63 64 65
        on right: 34 55 57 58 59 60 61 62 101 102 108 109
    simpleExp <node> (85)
        on left: 66 67
        on right: 12 43 44 47 49 51 52 53 65 66
    andExp <node> (86)
        on left: 68 69
        on right: 66 67 68
    unaryRelExp <node> (87)
        on left: 70 71
        on right: 68 69 70
    relExp <node> (88)
        on left: 72 73
        on right: 71
    relop <node> (89)
        on left: 74 75 76 77 78 79
        on right: 72
    minmaxExp <node> (90)
        on left: 80 81
        on right: 72 73 80
    minmaxop <node> (91)
        on left: 82 83
        on right: 80
    sumExp <node> (92)
        on left: 84 85
        on right: 80 81 84
    sumop <node> (93)
        on left: 86 87
        on right: 84
    mulExp <node> (94)
        on left: 88 89
        on right: 84 85 88
    mulop <node> (95)
        on left: 90 91 92
        on right: 88
    unaryExp <node> (96)
        on left: 93 94
        on right: 88 89 93
    unaryop <node> (97)
        on left: 95 96 97
        on right: 93
    factor <node> (98)
        on left: 98 99
        on right: 94
    mutable <node> (99)
        on left: 100 101
        on right: 58 59 60 61 62 63 64 99
    immutable <node> (100)
        on left: 102 103 104
        on right: 98
    call <node> (101)
        on left: 105
        on right: 103
    args <node> (102)
        on left: 106 107
        on right: 105
    argList <node> (103)
        on left: 108 109
        on right: 106 108
    constant <node> (104)
        on left: 110 111 112 113 114
        on right: 104


State 0

    0 $accept: • program $end

    ID    shift, and go to state 1
    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    program   go to state 5
    declList  go to state 6
    decl      go to state 7
    varDecl   go to state 8
    typeSpec  go to state 9
    funDecl   go to state 10


State 1

   19 funDecl: ID • LPAREN parms RPAREN stmt

    LPAREN  shift, and go to state 11


State 2

   15 typeSpec: INT •

    $default  reduce using rule 15 (typeSpec)


State 3

   16 typeSpec: BOOL •

    $default  reduce using rule 16 (typeSpec)


State 4

   17 typeSpec: CHAR •

    $default  reduce using rule 17 (typeSpec)


State 5

    0 $accept: program • $end

    $end  shift, and go to state 12


State 6

    1 program: declList •
    2 declList: declList • decl

    ID    shift, and go to state 1
    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 1 (program)

    decl      go to state 13
    varDecl   go to state 8
    typeSpec  go to state 9
    funDecl   go to state 10


State 7

    3 declList: decl •

    $default  reduce using rule 3 (declList)


State 8

    4 decl: varDecl •

    $default  reduce using rule 4 (decl)


State 9

    6 varDecl: typeSpec • varDeclList SEMICOLON
   18 funDecl: typeSpec • ID LPAREN parms RPAREN stmt

    ID  shift, and go to state 14

    varDeclList  go to state 15
    varDeclInit  go to state 16
    varDeclId    go to state 17


State 10

    5 decl: funDecl •

    $default  reduce using rule 5 (decl)


State 11

   19 funDecl: ID LPAREN • parms RPAREN stmt

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 21 (parms)

    typeSpec      go to state 18
    parms         go to state 19
    parmList      go to state 20
    parmTypeList  go to state 21


State 12

    0 $accept: program $end •

    $default  accept


State 13

    2 declList: declList decl •

    $default  reduce using rule 2 (declList)


State 14

   13 varDeclId: ID •
   14          | ID • LBRACKET NUMCONST RBRACKET
   18 funDecl: typeSpec ID • LPAREN parms RPAREN stmt

    LBRACKET  shift, and go to state 22
    LPAREN    shift, and go to state 23

    $default  reduce using rule 13 (varDeclId)


State 15

    6 varDecl: typeSpec varDeclList • SEMICOLON
    9 varDeclList: varDeclList • COMMA varDeclInit

    SEMICOLON  shift, and go to state 24
    COMMA      shift, and go to state 25


State 16

   10 varDeclList: varDeclInit •

    $default  reduce using rule 10 (varDeclList)


State 17

   11 varDeclInit: varDeclId •
   12            | varDeclId • COLON simpleExp

    COLON  shift, and go to state 26

    $default  reduce using rule 11 (varDeclInit)


State 18

   24 parmTypeList: typeSpec • parmIdList

    ID  shift, and go to state 27

    parmIdList  go to state 28
    parmId      go to state 29


State 19

   19 funDecl: ID LPAREN parms • RPAREN stmt

    RPAREN  shift, and go to state 30


State 20

   20 parms: parmList •
   22 parmList: parmList • SEMICOLON parmTypeList

    SEMICOLON  shift, and go to state 31

    $default  reduce using rule 20 (parms)


State 21

   23 parmList: parmTypeList •

    $default  reduce using rule 23 (parmList)


State 22

   14 varDeclId: ID LBRACKET • NUMCONST RBRACKET

    NUMCONST  shift, and go to state 32


State 23

   18 funDecl: typeSpec ID LPAREN • parms RPAREN stmt

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 21 (parms)

    typeSpec      go to state 18
    parms         go to state 33
    parmList      go to state 20
    parmTypeList  go to state 21


State 24

    6 varDecl: typeSpec varDeclList SEMICOLON •

    $default  reduce using rule 6 (varDecl)


State 25

    9 varDeclList: varDeclList COMMA • varDeclInit

    ID  shift, and go to state 34

    varDeclInit  go to state 35
    varDeclId    go to state 17


State 26

   12 varDeclInit: varDeclId COLON • simpleExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    LPAREN       shift, and go to state 40
    MINUS        shift, and go to state 41
    STAR         shift, and go to state 42
    QUESTION     shift, and go to state 43
    NOT          shift, and go to state 44
    TRUE         shift, and go to state 45
    FALSE        shift, and go to state 46

    simpleExp    go to state 47
    andExp       go to state 48
    unaryRelExp  go to state 49
    relExp       go to state 50
    minmaxExp    go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 27

   27 parmId: ID •
   28       | ID • LPAREN RPAREN

    LPAREN  shift, and go to state 61

    $default  reduce using rule 27 (parmId)


State 28

   24 parmTypeList: typeSpec parmIdList •
   25 parmIdList: parmIdList • COMMA parmId

    COMMA  shift, and go to state 62

    $default  reduce using rule 24 (parmTypeList)


State 29

   26 parmIdList: parmId •

    $default  reduce using rule 26 (parmIdList)


State 30

   19 funDecl: ID LPAREN parms RPAREN • stmt

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    SEMICOLON    shift, and go to state 63
    LPAREN       shift, and go to state 40
    LBRACE       shift, and go to state 64
    MINUS        shift, and go to state 41
    STAR         shift, and go to state 42
    QUESTION     shift, and go to state 43
    IF           shift, and go to state 65
    WHILE        shift, and go to state 66
    FOR          shift, and go to state 67
    RETURN       shift, and go to state 68
    BREAK        shift, and go to state 69
    NOT          shift, and go to state 44
    TRUE         shift, and go to state 45
    FALSE        shift, and go to state 46

    stmt           go to state 70
    otherStmts     go to state 71
    expStmt        go to state 72
    compoundStmt   go to state 73
    selectStmt     go to state 74
    matchedStmt    go to state 75
    unmatchedStmt  go to state 76
    returnStmt     go to state 77
    breakStmt      go to state 78
    exp            go to state 79
    simpleExp      go to state 80
    andExp         go to state 48
    unaryRelExp    go to state 49
    relExp         go to state 50
    minmaxExp      go to state 51
    sumExp         go to state 52
    mulExp         go to state 53
    unaryExp       go to state 54
    unaryop        go to state 55
    factor         go to state 56
    mutable        go to state 81
    immutable      go to state 58
    call           go to state 59
    constant       go to state 60


State 31

   22 parmList: parmList SEMICOLON • parmTypeList

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    typeSpec      go to state 18
    parmTypeList  go to state 82


State 32

   14 varDeclId: ID LBRACKET NUMCONST • RBRACKET

    RBRACKET  shift, and go to state 83


State 33

   18 funDecl: typeSpec ID LPAREN parms • RPAREN stmt

    RPAREN  shift, and go to state 84


State 34

   13 varDeclId: ID •
   14          | ID • LBRACKET NUMCONST RBRACKET

    LBRACKET  shift, and go to state 22

    $default  reduce using rule 13 (varDeclId)


State 35

    9 varDeclList: varDeclList COMMA varDeclInit •

    $default  reduce using rule 9 (varDeclList)


State 36

  100 mutable: ID •
  101        | ID • LBRACKET exp RBRACKET
  105 call: ID • LPAREN args RPAREN

    LBRACKET  shift, and go to state 85
    LPAREN    shift, and go to state 86

    $default  reduce using rule 100 (mutable)


State 37

  110 constant: NUMCONST •

    $default  reduce using rule 110 (constant)


State 38

  111 constant: CHARCONST •

    $default  reduce using rule 111 (constant)


State 39

  112 constant: STRINGCONST •

    $default  reduce using rule 112 (constant)


State 40

  102 immutable: LPAREN • exp RPAREN

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    LPAREN       shift, and go to state 40
    MINUS        shift, and go to state 41
    STAR         shift, and go to state 42
    QUESTION     shift, and go to state 43
    NOT          shift, and go to state 44
    TRUE         shift, and go to state 45
    FALSE        shift, and go to state 46

    exp          go to state 87
    simpleExp    go to state 80
    andExp       go to state 48
    unaryRelExp  go to state 49
    relExp       go to state 50
    minmaxExp    go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 81
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 41

   95 unaryop: MINUS •

    $default  reduce using rule 95 (unaryop)


State 42

   96 unaryop: STAR •

    $default  reduce using rule 96 (unaryop)


State 43

   97 unaryop: QUESTION •

    $default  reduce using rule 97 (unaryop)


State 44

   70 unaryRelExp: NOT • unaryRelExp

    ID           shift, and go to state 36
    NUMCONST     shift, and go to state 37
    CHARCONST    shift, and go to state 38
    STRINGCONST  shift, and go to state 39
    LPAREN       shift, and go to state 40
    MINUS        shift, and go to state 41
    STAR         shift, and go to state 42
    QUESTION     shift, and go to state 43
    NOT          shift, and go to state 44
    TRUE         shift, and go to state 45
    FALSE        shift, and go to state 46

    unaryRelExp  go to state 88
    relExp       go to state 50
    minmaxExp    go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 45

  113 constant: TRUE •

    $default  reduce using rule 113 (constant)


State 46

  114 constant: FALSE •

    $default  reduce using rule 114 (constant)


State 47

   12 varDeclInit: varDeclId COLON simpleExp •
   66 simpleExp: simpleExp • OR andExp

    OR  shift, and go to state 89

    $default  reduce using rule 12 (varDeclInit)


State 48

   67 simpleExp: andExp •
   68 andExp: andExp • AND unaryRelExp
